# docs/swagger.json
@@ -97,6 +97,80 @@
                 }
             }
         },
+        "/api/v1/live/insert": {
+            "post": {
+                "description": "Insert a live match",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Live"
+                ],
+                "summary": "Insert a live match",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Team ID 1",
+                        "name": "idteam1",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Team ID 2",
+                        "name": "idteam2",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "IdChampionship",
+                        "name": "idchampionship",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Date of Match",
+                        "name": "datematch",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Stadium",
+                        "name": "stadium",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Team Points 1",
+                        "name": "teampoints1",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Team Points 2",
+                        "name": "teampoints2",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/structs.Live"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/player/delete/{id}": {
             "delete": {
                 "description": "Delete a player by ID",
@@ -725,13 +799,13 @@
         "structs.Live": {
             "type": "object",
             "properties": {
-                "championship": {
-                    "type": "string"
-                },
                 "datematch": {
                     "type": "string"
                 },
                 "id": {
+                    "type": "integer"
+                },
+                "idchampionship": {
                     "type": "integer"
                 },
                 "stadium": {
